# stockbot

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
.claude/agents/: fintech-tpm.md  hft-backend-architect.md  realtime-finance-ui-lead.md  security-vulnerability-scanner.md
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a2c1f8e93b01_add_news_fetched_at_drop_data_snapshot.py  d31bb9e65df5_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  notifications.py  portfolios.py  recommendations.py  stocks.py
backend/app/models/: __init__.py  news.py  notification.py  portfolio.py  recommendation.py  stock.py  user.py
backend/app/schemas/: auth.py  news.py  notification.py  portfolio.py  recommendation.py  stock.py
backend/app/services/: ai_analysis.py  auth.py  market_data.py  news.py
backend/app/tasks/: cleanup.py  scheduler.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(app)/notifications/: page.tsx
frontend/src/app/(app)/portfolios/: page.tsx
frontend/src/app/(app)/recommendations/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: providers.tsx  stock-search.tsx
frontend/src/components/layout/: app-shell.tsx  sidebar.tsx
frontend/src/hooks/: use-auth.ts
frontend/src/lib/: api-client.ts  auth.ts  decimal.ts
frontend/src/types/: index.ts  next-auth.d.ts
(+3 files in other folders)
